examples/negative/pipes/pipe_no_module.kai
# Issue #594 — pipe against a head whose declaring module is not in
# scope. `Source[T]` is declared locally in the root file, no module
# `source` is imported, so the head-owner cache reports HLNone and
# the typer must say "no module declaring type `Source` is in scope".

type Source[t] = MkSrc(t)

fn main() : Int {
  let s = MkSrc(42)
  let r = s | (n) => n + 1
  0
}
